--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Katlo</title>
+    <title>Katlo | Wordle Boso Jowo</title>
+    <link rel="stylesheet" href="/reset.css" />
   </head>
   <body>
     <div id="app"></div>
